bkpddr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bkextest
spec:
  selector:
    matchLabels:
      app: bkextest
  template:
    metadata:
      labels:
        app: bkextest
    spec:
      containers:
      - name: bkextest
        image: harbordr.services.brown.edu/bkextest/bkextest:latest
