bkpddr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkextest
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #cert-manager.io/issuer: "letsencrypt-staging"

spec:
  rules:
  - host: drbkedtest.virtorch.brown.edu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bkextest
            port: 
              number: 8080
